tests/samples/negative/modules/missing_import.ax
module missing_import;

import does.not.exist;

fn main() -> i32 {
    return 0;
}
